--- a/opgA.html
+++ b/opgA.html
@@ -29,7 +29,8 @@
     </header>
     <main>
         <h1>Opgave A</h1>
-        <p>Opgave tekst</p>
+        <p>Denne opgave løste jeg ved hjælp af grid. Som en af de nye ting som vi har lært i dette tema benytter jeg mig
+            af container queries, i stedet for media queries. </p>
         <div class="a_card_wrapper">
             <div class="a_card">
                 <img src="imgs/profile_pic.avif" alt="profile picture">
