--- a/opgB.html
+++ b/opgB.html
@@ -29,7 +29,8 @@
     </header>
     <main>
         <h1>Opgave B</h1>
-        <p>Opgave tekst</p>
+        <p>Denne opgave løser meget sig selv ved hjælp af grid og minmax som gør at grid elementerne automatisk laver en
+            ny række til det grid element som der ikke er plads til.</p>
         <div class="b_card_container">
             <div class="b_card">
                 <div class="person">
