--- a/opgC.html
+++ b/opgC.html
@@ -29,7 +29,8 @@
     </header>
     <main>
         <h1>Opgave C</h1>
-        <p>beskrivelse</p>
+        <p>Ved hjælp af grid kan jeg placere elementer oven på hinanden. Igen ved hjælp af container queries kan jeg
+            løse opgaven.</p>
 
         <div class="c_card_wrapper">
             <div class="c_card">
@@ -37,21 +38,26 @@
                 <img src="imgs/minh-pham-OtXADkUh3-I-unsplash.jpg" alt="Room">
                 <div class="text_wrapper">
                     <h1>Lorem ipsum Dolor</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium laudantium quos vel enim
-                        tempora? Aliquid rerum quasi nostrum esse assumenda, placeat vel. Voluptatibus minus sint
-                        laboriosam, quis expedita tempora quia.
-                        Minima molestiae sit sequi praesentium et unde nihil voluptate, error hic neque ex repellat
-                        voluptatibus laborum repellendus laudantium, nisi aperiam perferendis? Tempore, odio quaerat
-                        repudiandae iste magni fugit quasi! Sapiente!
-                        Quia dolore recusandae officiis? Doloribus, minus sit. Dignissimos placeat doloremque numquam
-                        eum
-                        dolorum facere dolore temporibus nostrum voluptate modi cum ad et natus quasi nobis autem, id
-                        nulla
-                        delectus tenetur?</p>
+                    <div class="bread">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium laudantium quos vel
+                            enim
+                            tempora? Aliquid rerum quasi nostrum esse assumenda, placeat vel. Voluptatibus minus sint
+                            laboriosam, quis expedita tempora quia.
+                            Minima molestiae sit sequi praesentium et unde nihil voluptate, error hic neque ex repellat
+                            voluptatibus laborum repellendus laudantium, nisi aperiam perferendis? Tempore, odio quaerat
+                            repudiandae iste magni fugit quasi! Sapiente!
+                            Quia dolore recusandae officiis? Doloribus, minus sit. Dignissimos placeat doloremque
+                            numquam
+                            eum
+                            dolorum facere dolore temporibus nostrum voluptate modi cum ad et natus quasi nobis autem,
+                            id
+                            nulla
+                            delectus tenetur?</p>
 
-                    <div class="knap">
-                        <p>Lorem Ipsum</p>
-                        <p>></p>
+                        <div class="knap">
+                            <p>Lorem Ipsum</p>
+                            <p>></p>
+                        </div>
                     </div>
                 </div>
             </div>
