--- a/opgD.html
+++ b/opgD.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Forside </title>
+    <title>Opgave D</title>
 </head>
 
 <body>
@@ -28,9 +28,8 @@
         </nav>
     </header>
     <main>
-        <h1>Design opgave</h1>
-        <p>Dette er mit svar på design opgaven. Jeg har udarbejdet opgaven ud fra styletilet som set nedenfor. </p>
-        <img src="imgs/style.png" alt="Style tile">
+        <h1>Opgave D</h1>
+        <p>Under konstruktion</p>
     </main>
     <footer></footer>
 
