--- a/opgD.html
+++ b/opgD.html
@@ -30,6 +30,101 @@
     <main>
         <h1>Opgave D</h1>
         <p>Under konstruktion</p>
+
+        <div class="d_card_container">
+            <div class="d_card">
+                <div class="box">
+                    <div class="title_img">
+                        <img src="imgs/profile_pic.avif" alt="profile picture">
+                        <div class="name_profile">
+                            <h2>Sean Dyche</h2>
+                            <p>Everton Manager</p>
+                        </div>
+                    </div>
+                    <p class="first_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel ipsa aliquid
+                        veritatis
+                        consequuntur
+                        illum nihil praesentium, tenetur esse. Doloribus inventore aut reiciendis maxime impedit at
+                        tenetur
+                        numquam temporibus animi!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates, neque sint rem soluta unde
+                        assumenda autem ex iusto voluptatibus magnam dolores reiciendis in recusandae voluptatum quas
+                        perferendis? Aut, eligendi mollitia?</p>
+                </div>
+                <div class="box">
+                    <div class="title_img">
+                        <img src="imgs/profile_pic.avif" alt="profile picture">
+                        <div class="name_profile">
+                            <h2>Sean Dyche</h2>
+                            <p>Everton Manager</p>
+                        </div>
+                    </div>
+                    <p class="first_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel ipsa aliquid
+                        veritatis
+                        consequuntur
+                        illum nihil praesentium, tenetur esse. Doloribus inventore aut reiciendis maxime impedit at
+                        tenetur
+                        numquam temporibus animi!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates, neque sint rem soluta unde
+                        assumenda autem ex iusto voluptatibus magnam dolores reiciendis in recusandae voluptatum quas
+                        perferendis? Aut, eligendi mollitia?</p>
+                </div>
+                <div class="box">
+                    <div class="title_img">
+                        <img src="imgs/profile_pic.avif" alt="profile picture">
+                        <div class="name_profile">
+                            <h2>Sean Dyche</h2>
+                            <p>Everton Manager</p>
+                        </div>
+                    </div>
+                    <p class="first_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel ipsa aliquid
+                        veritatis
+                        consequuntur
+                        illum nihil praesentium, tenetur esse. Doloribus inventore aut reiciendis maxime impedit at
+                        tenetur
+                        numquam temporibus animi!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates, neque sint rem soluta unde
+                        assumenda autem ex iusto voluptatibus magnam dolores reiciendis in recusandae voluptatum quas
+                        perferendis? Aut, eligendi mollitia?</p>
+                </div>
+                <div class="box">
+                    <div class="title_img">
+                        <img src="imgs/profile_pic.avif" alt="profile picture">
+                        <div class="name_profile">
+                            <h2>Sean Dyche</h2>
+                            <p>Everton Manager</p>
+                        </div>
+                    </div>
+                    <p class="first_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel ipsa aliquid
+                        veritatis
+                        consequuntur
+                        illum nihil praesentium, tenetur esse. Doloribus inventore aut reiciendis maxime impedit at
+                        tenetur
+                        numquam temporibus animi!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates, neque sint rem soluta unde
+                        assumenda autem ex iusto voluptatibus magnam dolores reiciendis in recusandae voluptatum quas
+                        perferendis? Aut, eligendi mollitia?</p>
+                </div>
+                <div class="box">
+                    <div class="title_img">
+                        <img src="imgs/profile_pic.avif" alt="profile picture">
+                        <div class="name_profile">
+                            <h2>Sean Dyche</h2>
+                            <p>Everton Manager</p>
+                        </div>
+                    </div>
+                    <p class="first_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel ipsa aliquid
+                        veritatis
+                        consequuntur
+                        illum nihil praesentium, tenetur esse. Doloribus inventore aut reiciendis maxime impedit at
+                        tenetur
+                        numquam temporibus animi!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates, neque sint rem soluta unde
+                        assumenda autem ex iusto voluptatibus magnam dolores reiciendis in recusandae voluptatum quas
+                        perferendis? Aut, eligendi mollitia?</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer></footer>
 
